gitops/manifests/ingress-routes/grafana-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.lab.hiteshp.in`)
      kind: Rule
      services:
        - name: prometheus-stack-grafana
          namespace: monitoring
          port: 80
  tls: {}
