gitops/manifests/ingress-routes/open-webui-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.lab.hiteshp.in`)
      kind: Rule
      services:
        - name: open-webui
          namespace: ollama
          port: 8080
  tls: {}
