gitops/manifests/ingress-routes/uptime-kuma-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.lab.hiteshp.in`)
      kind: Rule
      services:
        - name: uptime-kuma
          namespace: monitoring
          port: 3001
  tls: {}
